Update the linux intro file with new URLs and added Introduciton to R

--- a/01-Linux_101/cb2-101-Linux_intro.Rmd
+++ b/01-Linux_101/cb2-101-Linux_intro.Rmd
@@ -491,7 +491,7 @@ PFAM is a database of domains. It also provides pre-calculated domains for all p
 
 ## Problem 2
 
-On NCBI FTP site all the bacterial genomes are present in the directory <ftp://ftp.ncbi.nlm.nih.gov/genomes/Bacteria/>. There are hundreds of genomes in that directory. Using a single `wget` command download proteomes corresponding to all the *Yersinia_pestis* strains. The proteomes should be downloaded in such a way that each `".faa"` files are inside separate directory. A `ls` should print something like this:
+On NCBI FTP site all the bacterial genomes are present in the directory <ftp://ftp.ncbi.nlm.nih.gov/genomes/archive/old_refseq/Bacteria/>. There are hundreds of genomes in that directory. Using a single `wget` command download proteomes corresponding to all the *Yersinia_pestis* strains. The proteomes should be downloaded in such a way that each `".faa"` files are inside separate directory. A `ls` should print something like this:
 
 	Yersinia_pestis_A1122_uid158119/
 	Yersinia_pestis_Angola_uid58485/
@@ -511,7 +511,7 @@ On NCBI FTP site all the bacterial genomes are present in the directory <ftp://f
 Starting from last directory write a single `bash` command line to count the total number of proteins in all the *Yersinia pestis* strains together. You may chain as many commands as you wish.  
 
 ## Problem 4
-*E. coli* MG1655 is the standard referece strain of *E. coli*. The protein FASTA file for this strain can be downloaded from <ftp://ftp.ncbi.nlm.nih.gov/genomes/Bacteria/Escherichia_coli_K_12_substr__MG1655_uid57779/NC_000913.faa>. Using just `bash` commands can you find out what is the average length of protein in this strain? You may use as many commands as you may wish.
+*E. coli* MG1655 is the standard referece strain of *E. coli*. The protein FASTA file for this strain can be downloaded from <ftp://ftp.ncbi.nlm.nih.gov/genomes/archive/old_refseq/Bacteria/Escherichia_coli_K_12_substr__MG1655_uid57779/NC_000913.faa>. (a) Using just `bash` commands can you find out what is the average length of protein in this strain? You may use as many commands as you may wish. (b) In the second part of the problem, write your commmands in a bash script such a way that given any fasta file as the option to the script, it can print out the average length of protein in the file.
 
 \pagebreak
 
