--- a/01-Linux_101/cb2-101-Linux_intro.Rmd
+++ b/01-Linux_101/cb2-101-Linux_intro.Rmd
@@ -487,7 +487,7 @@ Now extract the accession number yourself.
 
 ## Problem 1 
 
-PFAM is a database of domains. It also provides pre-calculated domains for all proteomes. The current version can be found here <ftp://ftp.sanger.ac.uk/pub/databases/Pfam/releases/Pfam27.0/proteomes/>. Each file is a proteome identified by its taxonomic ID. Human has the ID 9606. Each of these files is tab-delimited and the 6th column is the domain ID. Download the human proteome file using `wget`. After downloading write just a single line of `bash` to find how many domain types (unique domains) are there in human genome. You may use as many commands, chained in pipes, as you wish.
+PFAM is a database of domains. It also provides pre-calculated domains for all proteomes. The current version can be found here <ftp://ftp.ebi.ac.uk/pub/databases/Pfam/releases/Pfam27.0/proteomes/>. Each file is a proteome identified by its taxonomic ID. Human has the ID 9606. Each of these files is tab-delimited and the 6th column is the domain ID. Download the human proteome file using `wget`. After downloading write just a single line of `bash` to find how many domain types (unique domains) are there in human genome. You may use as many commands, chained in pipes, as you wish.
 
 ## Problem 2
 
