Updated RNASeq with PCA
Former-commit-id: 01c3b155be3a850d465e5761efc2626c5ed73dfd

--- a/10-RNASeq/RMD/RNASeq.Rmd
+++ b/10-RNASeq/RMD/RNASeq.Rmd
@@ -213,7 +213,7 @@ results
 plotMA(results)
 ```
 
-## Principal component
+## Principal component analysis
 
 ```{r}
 d <- read.table("../data/pnas_expression.txt",header=T)
