Cleaning up git practicals

--- a/03-Reproducible_research/git_practicals.ipynb
+++ b/03-Reproducible_research/git_practicals.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cloning into 'test_class'...\n",
-      "Warning: Permanently added the RSA host key for IP address '140.82.114.4' to the list of known hosts.\n",
-      "remote: Enumerating objects: 10, done.\u001b[K\n",
-      "remote: Total 10 (delta 0), reused 0 (delta 0), pack-reused 10\u001b[K\n",
-      "Receiving objects: 100% (10/10), done.\n",
-      "Resolving deltas: 100% (1/1), done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git clone $gitrepo test_class"
    ]
@@ -56,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "README.md\n",
-      "/Users/malay/scratch/CB2-101-BioComp/03-Reproducible_research/test_class\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cd test_class\n",
     "ls\n",
@@ -83,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,24 +94,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\t\u001b[31m./\u001b[m\n",
-      "\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git status"
    ]
@@ -147,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,23 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes to be committed:\n",
-      "  (use \"git restore --staged <file>...\" to unstage)\n",
-      "\t\u001b[32mnew file:   hello.txt\u001b[m\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git status"
    ]
@@ -193,19 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master adc28c4] My first commit\n",
-      " 1 file changed, 1 insertion(+)\n",
-      " create mode 100644 assignment1/hello.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git commit -m \"My first commit\""
    ]
@@ -219,24 +158,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
-      "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (2/2), done.\n",
-      "Writing objects: 100% (4/4), 374 bytes | 374.00 KiB/s, done.\n",
-      "Total 4 (delta 0), reused 0 (delta 0), pack-reused 0\n",
-      "To github.com:cb2edu/testgit.git\n",
-      "   dce6e3c..adc28c4  master -> master\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git push origin master"
    ]
@@ -250,17 +174,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello class\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "echo \"Hello class\" >hello.txt\n",
     "cat hello.txt"
@@ -275,25 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "On branch master\n",
-      "Your branch is up to date with 'origin/master'.\n",
-      "\n",
-      "Changes not staged for commit:\n",
-      "  (use \"git add <file>...\" to update what will be committed)\n",
-      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
-      "\t\u001b[31mmodified:   hello.txt\u001b[m\n",
-      "\n",
-      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git status"
    ]
@@ -307,18 +207,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master 4ac964a] Second change\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git add . -A\n",
     "git commit -m \"Second change\""
@@ -333,25 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
-      "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (2/2), done.\n",
-      "Writing objects: 100% (4/4), 309 bytes | 309.00 KiB/s, done.\n",
-      "Total 4 (delta 1), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
-      "To github.com:cb2edu/testgit.git\n",
-      "   adc28c4..4ac964a  master -> master\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git push origin master"
    ]
@@ -365,45 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mcommit 4ac964a52e188f82e968d40e2f0ec079a7c00b85\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mmaster\u001b[m\u001b[33m, \u001b[m\u001b[1;31morigin/master\u001b[m\u001b[33m, \u001b[m\u001b[1;31morigin/HEAD\u001b[m\u001b[33m)\u001b[m\n",
-      "Author: Malay <malaykbasu@gmail.com>\n",
-      "Date:   Mon Nov 9 20:07:29 2020 -0600\n",
-      "\n",
-      "    Second change\n",
-      "\n",
-      "\u001b[33mcommit adc28c44da4c3d0c888658be3380e6fe913aad2a\u001b[m\n",
-      "Author: Malay <malaykbasu@gmail.com>\n",
-      "Date:   Mon Nov 9 20:04:35 2020 -0600\n",
-      "\n",
-      "    My first commit\n",
-      "\n",
-      "\u001b[33mcommit dce6e3cde99e73c501b11b74fff4767b37265bcf\u001b[m\u001b[33m (\u001b[m\u001b[1;31morigin/first_branch\u001b[m\u001b[33m)\u001b[m\n",
-      "Author: Malay Basu <malaykbasu@gmail.com>\n",
-      "Date:   Fri May 24 11:06:40 2019 -0500\n",
-      "\n",
-      "    Another update on Github\n",
-      "\n",
-      "\u001b[33mcommit 3c046bffc067a4b082ebce88e47aa37374f35ecb\u001b[m\n",
-      "Author: Malay Kumar Basu <malay@login001.cm.cluster>\n",
-      "Date:   Fri May 24 11:04:19 2019 -0500\n",
-      "\n",
-      "    Added one line to README\n",
-      "\n",
-      "\u001b[33mcommit bc2fbf2d4cf085eeaad4fab93b6c0a7ee415a65c\u001b[m\n",
-      "Author: Malay Basu <malaykbasu@gmail.com>\n",
-      "Date:   Fri May 24 10:57:42 2019 -0500\n",
-      "\n",
-      "    Initial commit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git log"
    ]
@@ -417,17 +256,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 1 path from 04df38a\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git checkout HEAD~1 hello.txt\n",
     "cat hello.txt"
@@ -442,18 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated 1 path from ed7e439\n",
-      "Hello class\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "git checkout HEAD hello.txt\n",
     "cat hello.txt"
@@ -463,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We just scratched the surface of the git. "
+    "We just scratched the surface of the git. I suggest you go through a good book like this: https://git-scm.com/book/en/v2"
    ]
   }
  ],
